View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028601 | Open CASCADE | OCCT:Shape Healing | public | 2017-03-28 11:42 | 2017-09-29 16:25 |
Reporter | msv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028601: ShapeFix_Shape increases tolerance of sub-shapes of a valid shape | ||||
Description | Even for a valid shape like box the command fixshape increases tolerance of vertices and edges. And if we repeat fixshape on the result it again increases tolerances. | ||||
Steps To Reproduce | box b 10 10 10 tolerance b # Initial tolerances: #Tolerance MAX=9.9999999999999995e-008 AVG=9.9999999999999995e-008 MIN=9.9999999999999995e-008 #FACE : MAX=9.9999999999999995e-008 AVG=9.9999999999999995e-008 MIN=9.9999999999999995e-008 #EDGE : MAX=9.9999999999999995e-008 AVG=9.9999999999999995e-008 MIN=9.9999999999999995e-008 #VERTEX : MAX=9.9999999999999995e-008 AVG=9.9999999999999995e-008 MIN=9.9999999999999995e-008 fixshape b1 b tolerance b1 # Result tolerances: #Tolerance MAX=1.0001000025000001e-007 AVG=1.0000923099999988e-007 MIN=9.9999999999999995e-008 #FACE : MAX=9.9999999999999995e-008 AVG=9.9999999999999995e-008 MIN=9.9999999999999995e-008 #EDGE : MAX=1.0001000025000001e-007 AVG=1.0001000025000001e-007 MIN=1.0001000025000001e-007 #VERTEX : MAX=1.0001000025000001e-007 AVG=1.0001000025000001e-007 MIN=1.0001000025000001e-007 fixshape b2 b1 tolerance b2 # Next result tolerances: Tolerance MAX=1.0002000150005004e-007 AVG=1.0001846292312312e-007 MIN=9.9999999999999995e-008 FACE : MAX=9.9999999999999995e-008 AVG=9.9999999999999995e-008 MIN=9.9999999999999995e-008 EDGE : MAX=1.0002000150005004e-007 AVG=1.0002000150005004e-007 MIN=1.0002000150005004e-007 VERTEX : MAX=1.0002000150005004e-007 AVG=1.0002000150005004e-007 MIN=1.0002000150005004e-007 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug28601 | ||||
|
Branch CR28601 has been created by imn. SHA-1: c45b9971d94cc97e4aa3003a801e0793c8e10978 Detailed log of new commits: Author: imn Date: Fri Apr 14 15:15:18 2017 +0300 0028601: ShapeFix_Shape increases tolerance of sub-shapes of a valid shape - If tolerance hasn't been changed then 'fixshape' will not change it. |
|
Dear Mikhail, could you please review CR28601. |
|
Remarks: - Change commit message: Avoid increase of edge/vertex tolerance if the distance between 3D curve and p-curve is within old tolerance. src\ShapeFix\ShapeFix.cxx - Avoid unneeded computation (line 227) if isChanged is false. tests\bugs\modalg_6\bug28601 - remove 'checkview' command, as the picture does not contain anything worth to check. - remove tab characters in the file and align lines properly. |
|
Branch CR28601_1 has been created by imn. SHA-1: 3629d44c0138bb1fe00f3e38562ae813d431c357 Detailed log of new commits: Author: imn Date: Fri Apr 14 15:15:18 2017 +0300 0028601: ShapeFix_Shape increases tolerance of sub-shapes of a valid shape - Avoid increase of edge/vertex tolerance if the distance between 3D curve and p-curve is within old tolerance. |
|
Dear Mikhail, could you please review CR28601_1, branch is updated according to remarks |
|
Reviewed. |
|
Dear BugMaster, Branch CR28601_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 3629d44c0138bb1fe00f3e38562ae813d431c357 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1209 Regressions/Differences/Improvements: http://occt-tests/CR28601_1-master-OCCT/Debian70-64/bugs/heal/bug329.html http://occt-tests/CR28601_1-master-OCCT/Windows-64-VC10/bugs/heal/bug329.html Improvements: bugs heal bug329 Testing cases: http://occt-tests/CR28601_1-master-OCCT/Debian70-64/bugs/modalg_6/bug28601.html http://occt-tests/CR28601_1-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug28601.html bugs modalg_6 bug28601: OK Testing on Linux: occt component : Total MEMORY difference: 91811326 / 90701406 [+1.22%] Total CPU difference: 19810.100000000286 / 19728.26000000033 [+0.41%] products component : Total MEMORY difference: 30349096 / 30341918 [+0.02%] Total CPU difference: 5370.089999999985 / 5356.299999999965 [+0.26%] Testing on Windows: occt component : Total MEMORY difference: 57806030 / 57804189 [+0.00%] Total CPU difference: 18296.09368189848 / 18136.473458698543 [+0.88%] products component : Total MEMORY difference: 22303813 / 22265369 [+0.17%] Total CPU difference: 5365.669995099962 / 5359.788757399982 [+0.11%] There are following differences in images found by testdiff. http://occt-tests/CR28601_1-master-Products/Debian70-64/diff-Debian70-64.html http://occt-tests/CR28601_1-master-Products/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE sat doc_6 H4: H4.png differs |
|
Branch CR28601_1 has been updated by mkv. SHA-1: c7d56f462b5a8407dd37c6907f898087885f1bce Detailed log of new commits: Author: mkv Date: Wed Apr 19 19:37:27 2017 +0300 // Small correction of test case for issue CR28601 |
|
Dear BugMaster, Test case bugs/heal/bug329 was corrected and pushed to branch CR28601_1, now it is OK. |
|
Dear imn, Branch CR28601_1 has been rejected due to: - differences in images |
|
Differences in images are due to losses of curves during read/write source file. Now 4 more curves, which source shape contains, is founded and displayed, it's improvement. |
|
I agree, please test. |
|
Sorry, already tested, so integrate. |
|
Dear BugMaster, Branch CR28601_1 is TESTED. |
|
Branch CR28601 has been deleted by kgv. SHA-1: c45b9971d94cc97e4aa3003a801e0793c8e10978 |
|
Branch CR28601_1 has been deleted by kgv. SHA-1: c7d56f462b5a8407dd37c6907f898087885f1bce |
occt: master 0af424c2 2017-04-14 12:15:18 Committer: bugmaster Details Diff |
0028601: ShapeFix_Shape increases tolerance of sub-shapes of a valid shape - Avoid increase of edge/vertex tolerance if the distance between 3D curve and p-curve is within old tolerance. |
Affected Issues 0028601 |
|
mod - src/ShapeFix/ShapeFix.cxx | Diff File | ||
mod - tests/bugs/heal/bug329 | Diff File | ||
add - tests/bugs/modalg_6/bug28601 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-03-28 11:42 | msv | New Issue | |
2017-03-28 11:42 | msv | Assigned To | => gka |
2017-03-28 11:49 | msv | Relationship added | related to 0028602 |
2017-04-04 16:19 | msv | Assigned To | gka => imn |
2017-04-04 16:19 | msv | Status | new => assigned |
2017-04-14 15:17 | git | Note Added: 0065230 | |
2017-04-14 15:21 | imn | Note Added: 0065231 | |
2017-04-14 15:21 | imn | Assigned To | imn => msv |
2017-04-14 15:21 | imn | Status | assigned => resolved |
2017-04-18 09:57 | msv | Note Added: 0065279 | |
2017-04-18 09:57 | msv | Assigned To | msv => imn |
2017-04-18 09:57 | msv | Status | resolved => assigned |
2017-04-18 11:41 | git | Note Added: 0065282 | |
2017-04-18 11:44 | imn | Note Added: 0065283 | |
2017-04-18 11:44 | imn | Assigned To | imn => msv |
2017-04-18 11:44 | imn | Status | assigned => resolved |
2017-04-18 14:48 | msv | Note Added: 0065295 | |
2017-04-18 14:48 | msv | Assigned To | msv => bugmaster |
2017-04-18 14:48 | msv | Status | resolved => reviewed |
2017-04-18 15:42 |
|
Assigned To | bugmaster => mkv |
2017-04-19 19:37 |
|
Note Added: 0065368 | |
2017-04-19 19:38 | git | Note Added: 0065369 | |
2017-04-19 19:38 |
|
Note Added: 0065370 | |
2017-04-19 19:38 |
|
Note Added: 0065371 | |
2017-04-19 19:38 |
|
Assigned To | mkv => imn |
2017-04-19 19:38 |
|
Status | reviewed => feedback |
2017-04-19 19:39 |
|
Test case number | => bugs modalg_6 bug28601 |
2017-04-20 16:07 | imn | Note Added: 0065401 | |
2017-04-20 16:07 | imn | Assigned To | imn => msv |
2017-04-20 16:07 | imn | Status | feedback => resolved |
2017-04-20 16:07 | imn | Status | resolved => feedback |
2017-04-20 16:54 | msv | Note Added: 0065405 | |
2017-04-20 16:55 | msv | Assigned To | msv => mkv |
2017-04-20 16:56 | msv | Note Added: 0065406 | |
2017-04-21 17:20 |
|
Note Added: 0065433 | |
2017-04-21 17:20 |
|
Assigned To | mkv => bugmaster |
2017-04-21 17:20 |
|
Status | feedback => tested |
2017-04-28 13:08 | bugmaster | Changeset attached | => occt master 0af424c2 |
2017-04-28 13:08 | bugmaster | Status | tested => verified |
2017-04-28 13:08 | bugmaster | Resolution | open => fixed |
2017-05-12 11:36 | git | Note Added: 0065944 | |
2017-05-12 11:36 | git | Note Added: 0065945 | |
2017-09-29 16:19 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |