0028601: ShapeFix_Shape increases tolerance of sub-shapes of a valid shape - Avoid increase of edge/vertex tolerance if the distance between 3D curve and p-curve is within old tolerance.